[package]
name = "teko"
description = "The Teko programming language implementation in Rust"
version = "0.1.1"
authors = ["Kevin Robert Stravers <macocio@gmail.com>"]
license = "GPL-3.0"
website = "https://github.com/BourgondAries/teko"

[dependencies]
clippy = {version = "0.0.140", optional = true}
num = "0.1.37"
num-traits = "0.1.37"

[profile.release]
debug = true


[features]
default = []
