[package]
name = "teko"
description = "The Teko programming language implementation in Rust"
readme = "README.md"
version = "0.1.9"
authors = ["Kevin Robert Stravers <macocio@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/BourgondAries/teko"
keywords = ["programming", "language", "teko"]

[dependencies]
clippy = {version = "0.0.140", optional = true}
num = "0.1.37"
num-traits = "0.1.37"

[features]
default = []
